package com.example.javamvnspringbtblank.model;

public interface Notification {

    String getMessage();

    void setMessage(String message);
}
