package com.example.javamvnspringbtblank.service.channel;

public class SMSChannel implements Channel {
}
