package com.example.javamvnspringbtblank.service.channel;

public class SlackChannel implements Channel {
}
